--- a/rowsite/templates/accounts/navbar.html
+++ b/rowsite/templates/accounts/navbar.html
@@ -30,10 +30,11 @@
     </ul>
 
   </div>
-  <span class="hello-msg">Hello, {{ request.user.customer }} </span>
+  <span class="hello-msg">Hello, {% request.user.customer %} </span>
 
   <div>
     <span ><a class="hello-msg" href="{% url 'logout' %}">Logout</a> </span>
   </div>
+
 
 </nav>
